<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juan.ahorratela.Compras">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtNombre_Producto" />

            <ExpandableListView
                android:id="@+id/txt_Nproducto"
                android:layout_width="@dimen/caja_margin"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:hint="@string/hinNombre_Producto"
                android:inputType="text"
                android:privateImeOptions="actionGo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/txtUbicacion_lugar" />

            <ExpandableListView
                android:id="@+id/txt_pUbicacion"
                android:layout_width="@dimen/caja_margin"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:hint="@string/hinUbicacion_lugar"
                android:inputType="text"
                android:privateImeOptions="actionGo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/txtValor_Producto" />

            <ExpandableListView
                android:id="@+id/text_name"
                android:layout_width="@dimen/caja_margin"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:hint="@string/hinValor_Producto"
                android:inputType="text"
                android:privateImeOptions="actionGo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_AgregarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icn_add"/>

        <ListView
            android:layout_width="346dp"
            android:layout_height="209dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Guardar"
            android:id="@+id/btn_guardarP" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Cancelar"
            android:id="@+id/btn_cancelarP" />

    </LinearLayout>

    </LinearLayout>

</FrameLayout>
